# EzBoost

./: .gitattributes  readme.md
EzBoost/: CMakeLists.txt  Party.cc  Server1.cc  Server2.cc  User.cc  utils_common.hpp  utils_party.hpp  utils_server.hpp  utils_user.hpp  xg_boost.hpp
EzBoost/data/Credit/: UCI_Credit_Card - 副本.csv  UCI_Credit_Card.csv  divide.py
EzBoost/data/Credit/random_dataset/: datap1_refresh.csv  datap2.csv  datap3_refresh.csv  datap4_refresh.csv  test_data.csv  train_data.csv
EzBoost/data/Credit/use_dataset/: APdata_train.csv  APdata_train_little.csv  APdata_train_little_refresh.csv  PPdata_train_0_little.csv  PPdata_train_0_little_refresh.csv  PPdata_train_0_refresh.csv  PPdata_train_1_little.csv  PPdata_train_1_little_refresh.csv  PPdata_train_1_refresh.csv  PPdata_train_2.csv  PPdata_train_2_little.csv  PPdata_train_2_little_refresh.csv  PPdata_train_2_refresh.csv
EzBoost/sci_build/: Makefile  compile_commands.json  install_manifest.txt
EzBoost/sci_build/install/include/: cleartext_library_float.h  globals_float.h
EzBoost/sci_build/src/: cmake_install.cmake
EzBoost/sci_build/src/BuildingBlocks/: Makefile
EzBoost/sci_build/src/FloatingPoint/: Makefile  cmake_install.cmake
EzBoost/sci_build/src/GC/: Makefile
EzBoost/sci_build/src/LinearOT/: cmake_install.cmake
EzBoost/sci_build/src/Millionaire/: Makefile
EzBoost/sci_build/src/OT/: Makefile  cmake_install.cmake
EzBoost/sci_build/src/utils/: cmake_install.cmake
EzBoost/sci_build/tests/: Makefile
EzBoost/zmq_build/: CMakeCache.txt  DartConfiguration.tcl  Makefile
EzBoost/zmq_build/tests/: CTestTestfile.cmake  Makefile  unit_tests  unit_tests_tests-b12d07c.cmake
PureBoost/: CMakeLists.txt  Party.cc  utils-common.hpp  utils-party.hpp  xgboost.hpp
PureBoost/data/Credit/: UCI_Credit_Card.csv
PureBoost/data/Credit/random_dataset/: datap1_refresh.csv  datap2_refresh.csv  datap3.csv  datap4.csv  test_data.csv  train_data.csv
PureBoost/data/Credit/use_dataset/: APdata_train_little.csv  APdata_train_little_refresh.csv  APdata_train_refresh.csv  PPdata_train_0.csv  PPdata_train_1.csv  (+12 more)
PureBoost/sci_build/: CMakeCache.txt  cmake_install.cmake
PureBoost/sci_build/src/: Makefile
PureBoost/sci_build/tests/: cmake_install.cmake
PureBoost/zmq_build/: CTestTestfile.cmake  cmake_install.cmake  cppzmqTargets.cmake
PureBoost/zmq_build/tests/: cmake_install.cmake  unit_tests_include-b12d07c.cmake
(+84 files in other folders)
